docs/css/index.css
@font-face {
  font-family: mountains;
  src: url(/fonts/MountainsofChristmas-Bold.ttf);
}

@font-face {
  font-family: dreamed_away;
  src: url(/fonts/poco.ttf);
}


@keyframes fadeIn {
  0% { opacity: 0; }
  100% { opacity: 1; }
}

@keyframes slide {
  0% { margin-top: -100px; }
  100% { margin-top 0; }
}

html, body {
  font-family: -apple-system, system-ui, BlinkMacSystemFont, Aptos, Roboto, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  height: 100%;
}

body {
  color: #ebede9;
  background-color: #090a14;
}

.bg {
  max-width: 1800px;
  margin: 0 auto;
  width: 100%;
}

.bg.homepage {
  background-image: url(/img/background.jpg);
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  height: 100%;
}

.bg.backer-portal {
  background-image: url(/img/background.jpg);
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  min-height: 600px;
}

.backer-portal header {
  text-align: left;
  padding: 0 220px;
  max-width: 1800px;
  display: flex;
  align-items: center;
  min-height: 600px;
}

a {
  color: #e8c170;
  transition: all .5s ease-in;
  text-decoration: none;
}

a:hover {
  text-shadow: 0 0 4px #e8c170;
}

em {
  font-weight: bold;
}

.fade-in {
  opacity: 0;
  animation: fadeIn 2s;
  animation-fill-mode: forwards;
}

.fade-in.delayed {
  animation-delay: 1.5s;
}

.slide {
  animation: slide .5s ease-in;
}

nav {
  margin: 0 auto;
  padding: 20px 0;
  display: block;
  text-align: center;
  font-size: 1.3rem;
  background: rgba(0,0,0,.5);
}

nav a {
  color: white;
  padding: 0 30px;
  font-family: mountains;
  display: inline-block;
  font-size: 1.6rem;
}

nav a:hover {
  color: #e8c170;
  text-shadow: 0 0 12px #e8c170;
}

.side {
  font-size: 1.5rem;
  position: absolute;
  top: 0;
  right: 20px;
  padding: 20px 0;
}

.side a {
  color: white;
  padding: 0 15px;
}

.side a:hover {
  color: #e8c170;
}

header {
  text-align: left;
  padding: 0 220px;
  max-width: 1800px;
  display: flex;
  align-items: center;
  height: 100%;
}

header h1 {
  font-family: mountains;
  color: white;
  font-size: 10rem;
  line-height: 1;
  text-shadow: 0 6px 12px rgba(0,0,0,.6);
  text-align: center;
  display: inline-block;
}

h2 {
  font-family: mountains;
  font-size: 4rem;
  line-height: 1.5;
  text-shadow: 0 0 12px #ebede9;
  margin: 40px 0;
}

h3 {
  font-family: mountains;
  font-size: 2rem;
  line-height: 1.5;
  text-shadow: 0 0 12px #ebede9;
  margin: 20px 0;
}

p {
  font-size: 1.3rem;
  line-height: 1.5;
  max-width: 800px;
  text-align: left;
  margin: 20px auto;
  /* text-indent: 40px; */
}

header img {
  width: 400px;
}

.main {
  max-width: 800px;
  margin: 0 auto;
}

.banner {
  margin: 0 auto;
  width: 100%;
  text-align: center;
  color: white;
  font-family: Helvetica, Arial, Sans-Serif;
  font-size: 1.5em;
  padding: 30px 0;
}

.banner.ks {
  background: #05ce78;
}

.banner img {
  height: 1em;
  vertical-align: middle;
}

.banner a {
  color: white;
}

.banner a:hover {
  text-decoration: underline;
}

article {
  padding: 60px 0;
  text-align: center;
}

#trailer video {
  height: 500px;
  width: 889px;
}

#links .steam-widget {
  width: 646px;
  height: 190px;
  margin-bottom: 40px;
}

#links {
  background: linear-gradient(to bottom, #090a14, #0e2d44);
}

.platform {
  border: 3px solid white;
  display: inline-block;
  border-radius: 12px;
  padding: 12px;
  background: black;
}

.platform img {
  height: 40px;
}

a.social {
  font-size: 2rem;
}

footer {
  font-size: 1.5rem;
  margin: 40px;
  text-align: center;
}

#media {
  background: #202e37;
}

.youtube-container {
  max-width: 900px;
  margin: auto;
}

.youtube {
  position: relative;
  overflow: hidden;
  width: 100%;
  padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
}

.youtube iframe {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  width: 100%;
  height: 100%;
}

#ks-link {
  background: #05ce78;
  padding: 30px;
  font-family: mountains;
  font-size: 2rem;
}

#ks-link a {
  color: white;
}

#ks-link a:hover {
  text-decoration: underline;
}


#backer {
  background: linear-gradient(to bottom, #090a14, #0e2d44);
}

#backer img {
  max-width: 600px;
}


#rewards {
  background: linear-gradient(to bottom, #090a14, #371d37);
}

#rewards img {
  max-width: 600px;
}

@media (max-width: 1400px) {
  header h1 {
    font-size: 7rem;
  }
}

@media (max-width: 1200px) {
  header h1 {
    font-size: 6rem;
  }

  header {
    padding: 0 120px;
  }
}

@media (max-width: 800px) {
  html {
    font-size: .8em;
  }

  nav {
    font-size: 1rem;
  }

  nav a {
    padding: 0 10px;
  }

  .side {
    background: rgba(0,0,0,.5);
  }

  .bg.homepage, .bg.backer-portal, .homepage header, .backer-portal header {
    height: 50%;
    min-height: 0;
  }

  header h1 {
    font-size: 4rem;
  }

  .side {
    display: block;
    position: initial;
    text-align: center;
  }

  #trailer video {
    height: auto;
    width: 90%;
  }

  #links .steam-widget {
    width: 420px;
    height: 220px;
  }

  .platform img {
    height: 20px;
  }

  p {
    width: 90%;
  }

  #rewards img {
    max-width: 100%;
  }

}

@media(max-width: 500px) {
  .bg {
    height: 400px;
  }

  .backer-portal header, .homepage header {
    height: 300px;
    padding: 0 30px;
  }

  header h1 {
    font-size: 3rem;
  }

  nav a {
    font-size: 1.2rem;
  }
}

@media(min-width: 801px) {
  .has-banner {
    padding-top: 80px;
  }

  .banner {
    position: fixed;
    top: 0;
    height: 80px;
    width: 100%;
    z-index: 1;
  }
}

